Full bleed product page - change logo - fix size on one-line

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -14,15 +14,15 @@
   --font-size-display: 3rem; /* text-4xl */
   --color-shop-pay: #5a31f4;
   --shop-pay-button--width: 100%; /* Sets the width for the shop-pay-button web component */
-  --height-nav: 3rem;
+  --height-nav: 2.5rem;
   --screen-height: 100vh;
   --screen-height-dynamic: 100vh;
 
-  @media (min-width: 32em) {
-    --height-nav: 4rem;
+  @media (min-width: 768px) {
+    --height-nav: 2.5rem;
   }
-  @media (min-width: 48em) {
-    --height-nav: 6rem;
+  @media (min-width: 1024px) {
+    --height-nav: 5.1rem;
     --font-size-heading: 2.25rem; /* text-4xl */
     --font-size-display: 3.75rem; /* text-6xl */
   }
